--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@openzeppelin/contracts": "^5.2.0",
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "@openzeppelin/hardhat-upgrades": "^3.1.0",
+    "@pythnetwork/pyth-sdk-solidity": "^4.0.0",
+    "@zetachain/protocol-contracts": "^12.0.0",
     "bignumber.js": "^9.1.2",
     "bn.js": "^5.2.1",
     "chai": "4.3.7",
