--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.13",
     "@nomicfoundation/hardhat-web3-v4": "^1.0.0",
     "ethers": "^6.12.1",
     "hardhat": "^2.22.19",
