--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
-  "name": "hardhat-project",
+  "name": "zetahopper",
+  "version": "0.1.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
@@ -7,7 +14,40 @@
     "@nomicfoundation/hardhat-web3-v4": "^1.0.0",
     "ethers": "^6.12.1",
     "hardhat": "^2.22.19",
-    "web3": "^4.9.0"
+    "web3": "^4.9.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@rainbow-me/rainbowkit": "^2.2.4",
+    "@tanstack/react-query": "^5.71.1",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.4",
+    "framer-motion": "latest",
+    "lucide-react": "^0.454.0",
+    "next": "15.2.4",
+    "next-themes": "^0.4.4",
+    "pino": "^7.11.0",
+    "pino-pretty": "^9.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
+    "react-resizable-panels": "^2.1.7",
+    "react-scroll": "^1.9.3",
+    "recharts": "2.15.0",
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.6",
+    "viem": "2.x",
+    "wagmi": "^2.14.16",
+    "zod": "^3.24.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
@@ -19,6 +59,15 @@
     "bn.js": "^5.2.1",
     "chai": "4.3.7",
     "dotenv": "^16.4.5",
-    "solidity-coverage": "^0.8.12"
+    "solidity-coverage": "^0.8.12",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
