--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.13",
     "@nomicfoundation/hardhat-web3-v4": "^1.0.0",
-    "ethers": "^6.12.1",
-    "hardhat": "^2.22.19",
-    "web3": "^4.9.0",
-    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -25,11 +22,14 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.71.1",
+    "@tenderly/hardhat-tenderly": "^2.5.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "ethers": "^6.12.1",
     "framer-motion": "latest",
+    "hardhat": "^2.22.19",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
@@ -47,6 +47,7 @@
     "vaul": "^0.9.6",
     "viem": "2.x",
     "wagmi": "^2.14.16",
+    "web3": "^4.9.0",
     "zod": "^3.24.1"
   },
   "dependencies": {
@@ -54,19 +55,19 @@
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "@openzeppelin/hardhat-upgrades": "^3.1.0",
     "@pythnetwork/pyth-sdk-solidity": "^4.0.0",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
     "@zetachain/protocol-contracts": "^12.0.0",
     "bignumber.js": "^9.1.2",
     "bn.js": "^5.2.1",
     "chai": "4.3.7",
     "dotenv": "^16.4.5",
-    "solidity-coverage": "^0.8.12",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/react-scroll": "^1.8.10",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "postcss": "^8",
+    "solidity-coverage": "^0.8.12",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
