--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "eslint-config-next": "15.2.4",
     "lightweight-charts": "^5.0.5",
     "postcss": "^8",
+    "react-confetti": "^6.4.0",
+    "react-use": "^17.6.0",
     "solidity-coverage": "^0.8.12",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
